Added header image and fixed typos.

--- a/translation.html
+++ b/translation.html
@@ -22,8 +22,8 @@
 
 		<p><a href="index.html">Back to table of contents</a></p>
 
-		<img src="images/TBD.jpg" class="img-responsive" alt="TBD" />
-		<small>TBD</small>
+		<img src="images/comotion.jpg" class="img-responsive" alt="The front desk of the University of Washington's CoMotion, which supports technology transfer from research." />
+		<small>The front desk of the University of Washington's CoMotion, which supports technology transfer from research.</small>
 
 		<h1>Translating research into practice</h1>
 		<div class="lead">Andrew J. Ko</div>
@@ -31,13 +31,13 @@
 		<p>
 			I love doing research on interfaces.
 			There's nothing like imagining an entirely new way of interacting with a computer, creating it, and then showing it to the world.
-			But if the inventions researchers like myself create never impact the interfaces we all use every day, what's the point?
+			But if the inventions that researchers like myself create never impact the interfaces we all use every day, what's the point?
 			The answer, of course, is more complex than just a binary notion of an invention's impact.
 		</p>
 
 		<p>
 			First, much of what you've read about in this book has <em>already</em> impacted other researchers.
-			This type of research impact is critical: it shapes what other inventors think is possible, provides them with new ideas to pursue, and can sometimes catalyze entirely new genres.
+			This type of academic impact is critical: it shapes what other inventors think is possible, provides them with new ideas to pursue, and can sometimes catalyze entirely new genres.
 			Think back, for example, to Vannevar Bush's Memex.
 			No one actually made a Memex as described, nor did they need to; instead, other inventors selected some of their favorite ideas from his vision, combined them with other ideas, and manifested them in entirely unexpected ways.
 			The result was more than just more research ideas, but eventually products and entire networks of computers that have begun to reshape society.
@@ -53,13 +53,13 @@
 				<strong>Researchers must demonstrate feasibility</strong>.
 				Until we know that something works, that it works well, and that it works consistently, it just doesn't matter how exciting the idea is.
 				It took Xerox PARC years to make the GUI feel like something that could be a viable product.
+				Had it not seemed (and actually been) feasible, its unlikely Steve Jobs would have taken the risk to create Mac OS.
 			</li>
 			<li>
 				<strong>Someone must take an entreprenurial risk</strong>.
-				It doesn't matter how much evidence researchers gather about the viability of an interface idea.
-				At some point, someone in an organization is going to have to see some opportunity in bringing that interface to the world at scale.
-				Even if the interface is fully proven (which it never is), scale is its own risk.
-				These organizations might be startups, established companies, government entities, non-profits, open source communities, or any other form of community that wants to make something.
+				It doesn't matter how much confident researchers are about the feasibility and value of an interface idea.
+				At some point, someone in an organization is going to have to see some opportunity in bringing that interface to the world at scale, and no amount of research will be able to predict what will happen at scale.
+				These risk-taking organizations might be startups, established companies, government entities, non-profits, open source communities, or any other form of community that wants to make something.
 			</li>
 			<li>
 				<strong>The interface must win in the marketplace</strong>.
@@ -95,7 +95,7 @@
 		<p>
 			That example was fairly obvious of course; something that doesn't work clearly isn't going to be transferred into practice.
 			But what about something that <em>is</em> feasible based on research?
-			Consider, for example, brain-computer interfaces, which have a reasonable body of evidence behind them.
+			Consider, for example, brain-computer interfaces, which have <a href="body.html">a reasonable body of evidence behind them</a>.
 			We know that, for example, it's feasible to detect muscular activity with non-invasive sensors and that we can classify a large range of behaviors based on this.
 			The key point that many researchers fail to recognize is that such evidence of feasibility is <em>necessary but insufficient</em> to motivate a business risk.
 			To bring brain-computer interfaces to market, one needs a plan for who will pay for that technology and why.
@@ -143,32 +143,33 @@
 			First, if an interface idea hasn't been rigorously tested in research, building a product (or even a company) out of the idea is very risky.
 			That puts a product team or company in the position of essentially <em>doing</em> research, and as we know, research doesn't always work out.
 			Some companies (e.g., Waymo), decide to take on these high risks, but they often do so with the high expectation of failure.
-			Few companies can do that.
+			Few companies have the capital to do that.
 		</p>
 
 		<p>
 			Even when an idea is great and we know it works, there's a really critical phase in which someone has to learn about the idea, see an opportunity, and take a leap to invest in it.
-			Who's job is it to ensure that entrepreners and companies learn about research ideas?
+			Who's job is it to ensure that entrepreneurs and companies learn about research ideas?
 			Should researchers be obligated to market their ideas to companies?
 			If so, how should researchers get their attention?
 			Should product designers be obligated to visit academic conferences, read academic journals, or read books like this?
 			Why should they, when the return on investment is so low?
-			In other disciplines such as medicine, there are people who practice what's called <em>translational medicine</em>, in which researchers take basic medical discoveries and try to find product opportunities for them.
-			These roles are often funded by governemnts, which view their role as investing in things markets cannot risk doing.
+			In other disciplines such as medicine, there are people who practice what's called <strong>translational medicine</strong>, in which researchers take basic medical discoveries and try to find product opportunities for them.
+			These roles are often funded by governments, which view their role as investing in things markets cannot risk doing.
 			Perhaps computing should have the same roles and government investment.
 		</p>
 		
 		<p>
 			Finally, and perhaps most importantly, even when there <em>are</em> real opportunities for improving products through new interface ideas, the timing in the world has to be right.
 			People may view the benefit of learning a new interface as too low relative to the cost of learning.
-			There may be other products that have better marketing, or that have found ways of locking customers in.
-			These market factors have nothing to do with the merits of an idea, but the particular structure of a marketplace at a particular time.
+			There may be other products that have better marketing.
+			Or, customers might be "locked in," and face too many barriers to switch.
+			These market factors have nothing to do with the intrinsic merits of an idea, but rather the particular structure of a marketplace at a particular time in history.
 		</p>
 		
 		<p>
 			The result of these three factors is that the gap between research and practice is quite wide.
 			We shouldn't be surprised that innovations from academia can take decades to make it to market, if ever.
-			If you're reading this book, consider your role in mining research for innovations and bringing them to products.
+			If you're reading this book, consider your personal role in mining research for innovations and bringing them to products.
 			Are you in a position to take a risk on bringing a research innovation to the world?
 			If not, who is?
 		</p>
