--- a/ip.html
+++ b/ip.html
@@ -308,7 +308,7 @@
 			Regardless of what you think, these laws affect your work on user interface software technologies, and so you should closely monitor changes in intellectual property law and legal precedent.
 		</p>
 
-		<center><p class="lead"><a href="index.html">Table of Contents</a></p></center>
+		<center><p class="lead"><a href="translation.html">Next chapter: technology transfer</a></p></center>
 
 		<h2>Further reading</h2>
 
