Added a closing paragraph about AnswerDash.

--- a/translation.html
+++ b/translation.html
@@ -171,14 +171,26 @@
 			We shouldn't be surprised that innovations from academia can take decades to make it to market, if ever.
 			If you're reading this book, consider your personal role in mining research for innovations and bringing them to products.
 			Are you in a position to take a risk on bringing a research innovation to the world?
-			If not, who is?
+			If not, who is?			
+		</p>
+		
+		<p>
+			Taking this leap is no small ask.
+			When I left UW temporary to found AnswerDash in 2012 with my student Parmit Chilana and her co-advisor Jacob Wobbrock, it was a big, consequential decision.
+			We wrote about our experiences learning to sell and market a product (<a href="https://doi.org/10.1145/2702123.2702412">Chilana et al. 2015</a>), identifying all of the gaps between our research and what it took to create a successful product.
+			Later, just after I returned to UW, I reflected on the numerous challenges I personally faced growing a research idea into a successful product (<a href="https://doi.org/10.1109/ICSE-SEIP.2017.29">Ko 2017</a>).
+			While these personal stories are far from representative of what it takes to transfer research ideas to industry, they do illustrate a common challenge: turning any idea into a reality is a long, challenging, risky process, but a riveting and occasionally rewarding one.
 		</p>
 		
 		<center><p class="lead"><a href="index.html">Back to table of contents</a></p></center>
 
 		<h2>Further reading</h2>
 
+		<p>Chilana, P. K., Ko, A. J., & Wobbrock, J. (2015). <a href="https://doi.org/10.1145/2702123.2702412">From user-centered to adoption-centered design: a case study of an HCI research innovation becoming a product</a>. ACM SIGCHI Conference on Human Factors in Computing Systems.</p>
+
 		<p id="colusso">Lucas Colusso, Ridley Jones, Sean A. Munson, and Gary Hsieh (2019). A Translational Science Model for HCI. ACM SIGCHI Conference on Human Factors in Computing, to appear.</p>
+			
+		<p>Ko, A. J. (2017). <a href="https://doi.org/10.1109/ICSE-SEIP.2017.29">A three-year participant observation of software startup software evolution</a>. IEEE International Conference on Software Engineering: Software Engineering in Practice Track.</p>
 			
 		<script type="text/javascript">
 		
