--- a/text-entry.html
+++ b/text-entry.html
@@ -154,7 +154,7 @@
 
 		<p>
 			<img src="images/onscreen-keyboard.jpg" class="img-responsive center-block" alt="A user typing on an iPad on-screen keyboard" />
-			<center><em>On-screen keyboards are now ubiquitious in mobile devices.</em></center>
+			<center><em>On-screen keyboards are now ubiquitous in mobile devices.</em></center>
 		</p>		
 
 		<h2>Continuous input</h2>
