Fixed #48, adding Sutherland's VR headset.

--- a/3D.html
+++ b/3D.html
@@ -68,6 +68,15 @@
 		</center>
 
 		<p>
+			One of the first virtual reality systems to be connected to a computer was Ivan Sutherland's "Sword of Damocles", shown below, and created in 1968. With his student Bob Sproull, the headmounted display they created was far too heavy for someone to wear. The computer generated basic wireframe rooms and objects. This early work was pure proof of concept, trying to imagine a device that could render <em>any</em> interactive virtual world.
+		</p>
+
+		<center>
+			<img src="images/sutherland-sword-of-damocles.jpg" class="img-responsive" alt="A picture of someone using Ivan Sutherland's first virtual reality headset, mounted from the ceiling." />
+			<small>Ivan Sutherland's Sword of Damocles, the first virtual reality headset.</small>
+		</center>
+
+		<p>
 			In the 1990s, researchers developed CAVE systems (cave automatic virtual environments) to explore fully immersive virtual reality.
 			These systems used multiple projectors with polarized light and special 3D glasses to control the image seen by each eye.
 			After careful calibration, a CAVE user will perceive a fully 3D environment with a wide field of view.
