Fixed #46, citing ARCore.

--- a/3D.html
+++ b/3D.html
@@ -156,8 +156,9 @@ That rhetoric has been quite present in recent VR culture, but there are no guar
 			Augmented reality (AR), in contrast to virtual reality, does not aim for complete immersion in a virtual environment, but to alter reality to support human augmentation.
 			This vision for AR goes back to Ivan Sutherland (of <a href="history.html">Sketchpad</a>) in the 1960's, who dabbled with head mounted displays for augmentation.
 			Only in the late 1990's did the hardware and software sufficient for augmented reality begin to emerge, leading to research innovation in displays, projection, sensors, tracking, and, of course, interaction design (<a href="https://doi.org/10.1109/38.963459">Azuma et al. 2001</a>).
-			This has culminated in a range of commercially available techniques and toolkits for AR, most notably Apple's <a href="https://developer.apple.com/arkit/">ARKit</a>, which is the most ubiquitous deployment of a mixed reality platform to date, and Microsoft's <a href="https://www.microsoft.com/en-us/hololens">Hololens</a>.
-			Both are heavily informed by academic research and by Microsoft Research in particular.
+			This has culminated in a range of commercially available techniques and toolkits for AR, most notably Apple's <a href="https://developer.apple.com/arkit/">ARKit</a>, which is the most ubiquitous deployment of a mixed reality platform to date.
+			Other notable examples are <a href="https://developers.google.com/ar/">ARCore</a>, which emerged from Google's <a href="https://en.wikipedia.org/wiki/Tango_(platform)">Project Tango</a>, and Microsoft's <a href="https://www.microsoft.com/en-us/hololens">Hololens</a>.
+			All are heavily informed by decades of academic and industry research on augmented reality.
 		</p>
 
 		<p>
