Fixed #40, adding more reflection on open questions.

--- a/3D.html
+++ b/3D.html
@@ -191,8 +191,20 @@ That rhetoric has been quite present in recent VR culture, but there are no guar
 
 		<p>
 			From smartphone-based VR, to the more advanced mixed reality visions blending the physical and virtual worlds, designing interactive experiences around 3D output offers great potential for new media, but also great challenges in finding meaningful applications and seamless interactions.
-			Researchers are still hard at work trying to address these challenges, while industry forges ahead on scaling the robust engineering of practical hardware.
+			Researchers are still hard at work trying to address these challenges, while industry forges ahead on scaling the robust engineering of practical hardware. 
+			There are also many open questions about how 3D output will interact with the world around it:
 		</p>
+		
+		<ul>
+			<li>How can people seamlessly switch between AR, VR, and other modes of use while performing the same task?</li>
+			<li>How can VR engage groups when not everyone has a headset?</li>
+			<li>What activities are VR and AR suitable for? What tasks are they terrible for?</li>
+		</ul>
+		
+		<p>
+			These and a myriad of other questions are critical for determining what society chooses to do with AR and VR and how ubiquitous it becomes.
+		</p>
+			
 
 		<center><p class="lead"><a href="physical.html">Next chapter: Physical output</a></p></center>
 
