--- a/body.html
+++ b/body.html
@@ -167,7 +167,7 @@
 			This survey of body-based input techniques show a wide range of possible ways of providing input.
 			However, like any new interface ideas, there are many unresolved questions about how to train people to use them and how to support error recovery.
 			There are also many questions about the contexts in which such human-computer interaction might be socially acceptable.
-			The maturity of these ideas are therefore very much at the level of feasibility demonstrations, not full visions of application design and opeerating system support.
+			The maturity of these ideas are therefore very much at the level of feasibility demonstrations, not full visions of application design and operating system support.
 		</p>
 
 		<center><p class="lead"><a href="2D.html">Next chapter: 2D visual output</a></p></center>
