Removed wrong count.

--- a/ip.html
+++ b/ip.html
@@ -56,7 +56,7 @@
 			<li>What is the effect of ownership on innovation?</li>
 		</ul>
 
-		<p>In this chapter, we'll discuss these three questions, and review some of the more notable precedent in copyright and patent law in the United States.</p>
+		<p>In this chapter, we'll discuss these questions, and review some of the more notable precedent in copyright and patent law in the United States.</p>
 
 		<h2>What are interface ideas?</h2>
 
