--- a/ip.html
+++ b/ip.html
@@ -208,8 +208,8 @@
 		</p>
 
 		<ul>
-			<li>Designers strongly believed that the look and feel of user interfaces should not be given protection by copyright <em>or</em> patent law</li>
-			<li>Many believed the phrase "look and feel" was too vague to become part of legal precedent</li>
+			<li>Designers strongly believed that the look and feel of user interfaces should not be given protection by copyright <em>or</em> patent law.</li>
+			<li>Many believed the phrase "look and feel" was too vague to become part of legal precedent.</li>
 			<li>Many expressed concern that there was not yet a way to actually judge whether "look and feel" was comparable between two interfaces.</li>
 			<li>Many pointed out that the actual functionality of software is part of the look and feel of an interface, and that they did not believe this functionality should be protected or owned.</li>
 		</ul>
