Small clarification for precision.

--- a/translation.html
+++ b/translation.html
@@ -53,7 +53,7 @@
 				<strong>Researchers must demonstrate feasibility</strong>.
 				Until we know that something works, that it works well, and that it works consistently, it just doesn't matter how exciting the idea is.
 				It took Xerox PARC years to make the GUI feel like something that could be a viable product.
-				Had it not seemed (and actually been) feasible, its unlikely Steve Jobs would have taken the risk to create Mac OS.
+				Had it not seemed (and actually been) feasible, its unlikely Steve Jobs would have taken the risk to have Apple's talented team create Mac OS.
 			</li>
 			<li>
 				<strong>Someone must take an entreprenurial risk</strong>.
