--- a/translation.html
+++ b/translation.html
@@ -57,7 +57,7 @@
 			</li>
 			<li>
 				<strong>Someone must take an entreprenurial risk</strong>.
-				It doesn't matter how much confident researchers are about the feasibility and value of an interface idea.
+				It doesn't matter how confident researchers are about the feasibility and value of an interface idea.
 				At some point, someone in an organization is going to have to see some opportunity in bringing that interface to the world at scale, and no amount of research will be able to predict what will happen at scale.
 				These risk-taking organizations might be startups, established companies, government entities, non-profits, open source communities, or any other form of community that wants to make something.
 			</li>
