Clarified Google failures.

--- a/translation.html
+++ b/translation.html
@@ -64,7 +64,9 @@
 			<li>
 				<strong>The interface must win in the marketplace</strong>.
 				Even if an organization perfectly executes an interface at scale, and is fully committed to seeing it in the world, it only lives on if the timing is right for people to want it relative to other interfaces.
-				Consider Google's many poorly timed innnovations at scale: Google Glass, Google Wave, Google Buzz, Google Video; all of these were compelling new interface innovations, but none of them found a market, and so they didn't survive.
+				Consider Google's many poorly timed innnovations at scale: Google Glass, Google Wave, Google Buzz, Google Video; all of these were compelling new interface innovations that had been demonstrated feasible, but none of them found a market relative to existing media and devices.
+				And so they didn't survive.
+			</li>
 		</ul>
 
 		<p>
