Clarified role of Rosie.

--- a/translation.html
+++ b/translation.html
@@ -81,7 +81,7 @@
 		<p>
 			The first example we'll consider is what's typically known as <strong>strong AI</strong>.
 			This is the idea of a machine that exhibits behavior that is at least, if not more skillful than human behavior.
-			This is the kind of AI portrayed in many science fiction movies, usually where the AI either takes over humanity (e.g., <a href="https://en.wikipedia.org/wiki/The_Terminator">The Terminator</a>), or plays a significant role in human society (e.g., <a href="https://en.wikipedia.org/wiki/List_of_The_Jetsons_characters#Rosie">Rosie the robot maid in the Jetsons</a>).
+			This is the kind of AI portrayed in many science fiction movies, usually where the AI either takes over humanity (e.g., <a href="https://en.wikipedia.org/wiki/The_Terminator">The Terminator</a>), or plays a significant interpersonal role in human society (e.g., <a href="https://en.wikipedia.org/wiki/List_of_The_Jetsons_characters#Rosie">Rosie the robot maid in the Jetsons</a>).
 			These kinds of robots, in a sense, are an interface: we portray interacting with them, giving them commands, and utilizing their output.
 			The problem of course, is that strong AI isn't (yet) feasible.
 			No researchers have demonstrated any form of strong AI.
