--- a/translation.html
+++ b/translation.html
@@ -103,7 +103,7 @@
 			To bring brain-computer interfaces to market, one needs a plan for who will pay for that technology and why.
 			Will it be a popular game or gaming platform that causes people to buy?
 			A context where hands-free, voice-free input is essential and valuable?
-			Or perhaps someone will bet on creating a <em>platform</em> on which millions of application designers might experiment, searching for that killer app?
+			Or perhaps someone will bet on creating a platform on which millions of application designers might experiment, searching for that killer app?
 			Whatever happens, it will be a market opportunity that pulls research innovations from the archives of digital libraries and researcher's heads into the product plans of an organization.
 		</p>
 
