--- a/translation.html
+++ b/translation.html
@@ -120,7 +120,7 @@
 			However, the release was more of a beta in terms of functionality.
 			And people weren't ready to constantly say "OK, Glass" every time they wanted it to do something.
 			And the public was <em>definitely</em> not ready for people wandering around with a recording device on their face.
-			The knickname "Glasshole" was coined to describe early adopters, and suddenly, the cost of wearing the device wasn't just financial, but social.
+			The nickname "Glasshole" was coined to describe early adopters, and suddenly, the cost of wearing the device wasn't just financial, but social.
 			Google left the market in 2015, largely because there <em>wasn't</em> a market to sell to (yet, or possibly ever).
 		</p>
 
