--- a/translation.html
+++ b/translation.html
@@ -136,7 +136,8 @@
 			The project led to many spinoff companies, including one called Siri, Inc., which was founded by three researchers at SRI, International, a research lab in Silicon Valley that was charged with being the lead integrator of the CALO project.
 			The <a href="https://www.sri.com/work/timeline-innovation/timeline.php?timeline=computing-digital#!&innovation=siri">Siri company</a> took many of the ideas that the CALO project demonstrated as feasible (speech recognition, high quality speech synthesis, mapping speech to commands), and attempted to build a service out them.
 			After a few rounds of venture capital in 2007, and a few years of product development, Apple acquired Siri, kept its name, and integrated it into the iPhone.
-			In this case, there was no existing market for digital voice assistants, but Apple was interested in making one, and did: Google, Microsoft, and Amazon quickly followed by creating their own digital voice assistants.
+			In this case, there was no market for standalone digital voice assistants, but Apple saw how Siri could give them competitive advantage in the existing smartphone market: Google, Microsoft, and Amazon quickly followed by creating their own digital voice assistants in order to compete.
+			Once digital voice assistants were widely adopted, this created other opportunities: Amazon, for example, so the potential for a standalone device and created the smartspeaker device category. 
 		</p>
 		
 		<p>
