Added investment detail.

--- a/translation.html
+++ b/translation.html
@@ -146,7 +146,7 @@
 			First, if an interface idea hasn't been rigorously tested in research, building a product (or even a company) out of the idea is very risky.
 			That puts a product team or company in the position of essentially <em>doing</em> research, and as we know, research doesn't always work out.
 			Some companies (e.g., Waymo), decide to take on these high risks, but they often do so with the high expectation of failure.
-			Few companies have the capital to do that.
+			Few companies have the capital to do that, and so the responsibility for high risk innovations falls to governments, academia, and the few industry research labs at big companies willing to invest big risks.
 		</p>
 
 		<p>
