--- a/translation.html
+++ b/translation.html
@@ -179,10 +179,11 @@
 		
 		<p>
 			Taking this leap is no small ask.
-			When I left UW temporary to found AnswerDash in 2012 with my student Parmit Chilana and her co-advisor Jacob Wobbrock, it was a big, consequential decision.
+			When I went on leave to found AnswerDash in 2012 with my student Parmit Chilana and her co-advisor Jacob Wobbrock, it was a big, consequential personal decision with broad impacts not only on my professional life, but my personal life.
 			We wrote about our experiences learning to sell and market a product (<a href="https://doi.org/10.1145/2702123.2702412">Chilana et al. 2015</a>), identifying all of the gaps between our research and what it took to create a successful product.
 			Later, just after I returned to UW, I reflected on the numerous challenges I personally faced growing a research idea into a successful product (<a href="https://doi.org/10.1109/ICSE-SEIP.2017.29">Ko 2017</a>).
-			While these personal stories are far from representative of what it takes to transfer research ideas to industry, they do illustrate a common challenge: turning any idea into a reality is a long, challenging, risky process, but a riveting and occasionally rewarding one.
+			While these personal stories are far from representative of what it takes to transfer research ideas to industry, they do illustrate a common challenge: turning any idea into a reality is a long, challenging, risky process, but a riveting and often rewarding one.
+			Before defaulting to a large established stable company, ask yourself: what might you <em>only</em> learn at a startup that you couldn't learn in an established business?
 		</p>
 		
 		<center><p class="lead"><a href="index.html">Back to table of contents</a></p></center>
