Added link to translational science paper.

--- a/translation.html
+++ b/translation.html
@@ -192,7 +192,7 @@
 
 		<p>Chilana, P. K., Ko, A. J., & Wobbrock, J. (2015). <a href="https://doi.org/10.1145/2702123.2702412">From user-centered to adoption-centered design: a case study of an HCI research innovation becoming a product</a>. ACM SIGCHI Conference on Human Factors in Computing Systems.</p>
 
-		<p id="colusso">Lucas Colusso, Ridley Jones, Sean A. Munson, and Gary Hsieh (2019). A Translational Science Model for HCI. ACM SIGCHI Conference on Human Factors in Computing, to appear.</p>
+		<p id="colusso">Lucas Colusso, Ridley Jones, Sean A. Munson, and Gary Hsieh (2019). <a href="http://www.smunson.com/portfolio/projects/translationalresearch/colusso-HCI_TS_Model-CHI2019.pdf">A Translational Science Model for HCI</a>. ACM SIGCHI Conference on Human Factors in Computing, to appear.</p>
 			
 		<p>Ko, A. J. (2017). <a href="https://doi.org/10.1109/ICSE-SEIP.2017.29">A three-year participant observation of software startup software evolution</a>. IEEE International Conference on Software Engineering: Software Engineering in Practice Track.</p>
 			
